Apply idea code analysis suggestions A-F modules